# AI----

./: .gitignore  GUIDE.md  PROJECT.md  pyproject.toml
.github/workflows/: test.yml
app/: config.py  embedding.py  main.py
app/compare/: comparator.py
app/evaluator/: base.py  completeness.py  faithfulness.py  hallucination.py  relevance.py
app/harness/: loader.py  runner.py
app/judge/: base.py  deepseek_judge.py
app/models/: schemas.py
examples/: sample_test_cases.yaml
tests/: conftest.py  test_completeness.py  test_faithfulness.py  test_hallucination.py  test_harness.py  test_relevance.py
