[project]
name = "ai-eval-framework"
version = "0.1.0"
description = "AI 输出质量评测框架 — 幻觉检测、忠实度评估、多模型对比"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]",
    "sentence-transformers>=3.0.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]